Terraform_Deploy_Nginx_On_EC2/internetGateway.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags, {
    Name = "main_igw"
  })
}
