Terraform_Deploy_Nginx_On_EC2/networking.tf
resource "aws_vpc" "main" {
  tags = merge(local.common_tags, {
    Name = "main_vpc_Terraform"
  })

  cidr_block = "10.0.0.0/16"
}
