Terraform_Deploy_Nginx_On_EC2/subnet.tf
resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.0.0/24"

  tags = merge(local.common_tags, {
    Name = "Public_Subnet"
  })
}
